create post service, add date locale provider

--- a/app/mdx/developingClusterApps.mdx
+++ b/app/mdx/developingClusterApps.mdx
@@ -1,7 +1,7 @@
 ---
 title: Developing Cluster Apps
 description: How I build apps for my own home-grown Kubernetes cluster
-date: 2022-05-14
+created: 2022-05-14
 lastUpdated: 2022-05-14
 ---
 
