--- a/app/mdx/myCluster.mdx
+++ b/app/mdx/myCluster.mdx
@@ -3,7 +3,7 @@ title: "BYOK: Kubernetes Cluster at Home for Web App Development"
 description: |
   An overview of how to build and maintain a Kubernetes cluster for web app
   development, as a DIY alternative to app platforms like Heroku.
-date: 2022-05-14
+created: 2022-05-14
 lastUpdated: 2022-05-14
 ---
 
