add dates to /blog/$post

--- a/app/mdx/myCluster.mdx
+++ b/app/mdx/myCluster.mdx
@@ -1,10 +1,9 @@
 ---
-title: "BYOK: Kubernetes Cluster at Home for Web App Development"
+title: "Kubernetes DIY from Hardware to IaC"
 description: |
   An overview of how to build and maintain a Kubernetes cluster for web app
   development, as a DIY alternative to app platforms like Heroku.
 created: 2022-05-14
-lastUpdated: 2022-05-14
 ---
 
 import { Image } from "~/components/image";
