content: update myCluster

--- a/app/mdx/myCluster.mdx
+++ b/app/mdx/myCluster.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Kubernetes DIY from Hardware to IaC"
+title: "DIY Kubernetes from Hardware to IaC"
 description: |
   An overview of how to build and maintain a Kubernetes cluster for web app
   development, as a DIY alternative to app platforms like Heroku.
@@ -9,7 +9,7 @@ created: 2022-05-14
 import { Image } from "~/components/image";
 import { MyRepos } from "~/components/myRepos";
 
-# BYOK: Kubernetes Cluster at Home for Web App Development
+# DIY Kubernetes from Hardware to IaC
 
 All of my websites (including this one) run on a Kubernetes cluster in my home.
 This is a detailed guide for how you can mimic my setup, which is introduced by
