--- a/app/mdx/developingClusterApps.mdx
+++ b/app/mdx/developingClusterApps.mdx
@@ -1,6 +1,7 @@
 ---
 title: My Kubernetes-at-Home Workflow
 description: How I build apps for my own home-grown Kubernetes cluster
+thumbnail: /static/cluster.webp 
 created: 2022-05-19
 ---
 
