--- a/app/mdx/myCluster.mdx
+++ b/app/mdx/myCluster.mdx
@@ -3,6 +3,7 @@ title: "DIY Kubernetes from Hardware to IaC"
 description: |
   An overview of how to build and maintain a Kubernetes cluster for web app
   development, as a DIY alternative to app platforms like Heroku.
+thumbnail: /static/cluster.webp 
 created: 2022-05-14
 ---
 
