setup unit tests

--- a/app/mdx/developingClusterApps.mdx
+++ b/app/mdx/developingClusterApps.mdx
@@ -5,8 +5,8 @@ thumbnail: /static/cluster.webp
 created: 2022-05-19
 ---
 
-import { CodeSample } from '~/components/codeSample';
-import { Image } from '~/components/image';
+import { CodeSample } from '../components/codeSample';
+import { Image } from '../components/image';
 
 # My Kubernetes-at-Home Workflow
 
