--- a/app/mdx/myCluster.mdx
+++ b/app/mdx/myCluster.mdx
@@ -7,8 +7,8 @@ thumbnail: /static/cluster.webp
 created: 2022-05-14
 ---
 
-import { Image } from "~/components/image";
-import { MyRepos } from "~/components/myRepos";
+import { Image } from "../components/image";
+import { MyRepos } from "../components/myRepos";
 
 # DIY Kubernetes from Hardware to IaC
 
