--- a/app/mdx/gitDescribe.mdx
+++ b/app/mdx/gitDescribe.mdx
@@ -4,7 +4,7 @@ description: Call git describe --tags and other shell commands from Terraform
 created: 2022-05-27
 ---
 
-# `git tag` in Terraform
+# `git describe` in Terraform
 
 It's really easy to get the output of `git describe --tags` using Terraform's
 native [external
