--- a/app/mdx/vimTutorial.mdx
+++ b/app/mdx/vimTutorial.mdx
@@ -1,11 +1,12 @@
 ---
 title: (neo)vim from Scratch
 description: How to become a vim user, from a daily neovim user.
-created: 2022-07-31
+created: 2022-08-13
 thumbnail: /static/vimLogo.webp
 ---
 
 import { Image } from "../components/image";
+import { CodeSample } from "../components/codeSample";
 
 # Zero to Hero Vim Tutorial
 
@@ -26,54 +27,9 @@ just makes me happy. To that end, I hope that this guide helps you join me.
 
 ## `vim` vs `neovim`
 
-As a newcomer, which editor to use, which plugins to choose, and the overall
-path from zero to hero are muddy waters. From a user's perspective, neovim is
-almost 100% compatible with vim for all intents and purposes. That assertion
-breaks down once we start looking at plugins, but the overall user experience
-_before_ plugins is comparable. To that end, it doesn't really matter which one
-you start with, although I'm going to introduce vim with a much simpler
-configuration setup as a stepping stone to my IDE-like neovim setup.
-
-Neovim has applied massive architectural changes compared to vim, and
-neovim has added the lua scripting language as a successor to vim script.
-Neovim is also a community-led open source project, whereas vim follows the
-so-called "benevolent dictator for life" model, where vim's founder Bram
-Moolenaar makes final decisions about the future of the project, for
-[better or worse.](https://news.ycombinator.com/item?id=29758549)
-
-In any case, neovim's architectural improvements combined with lua as a
-first-class scripting language have made extremely sophisticated plugins
-easier to develop than ever, and the community is bustling to say the least. At
-this point, popular neovim plugins are polished, consistent, and extremely
-performant. Not only that, but since they're all implemented in neovim-flavored
-lua, they provide APIs for extension, which means that plugin authors can
-collaborate and rely on each others' plugins. It's truly the best of the open
-source ecosystem at work.
-
-I don't want to give plain old vim the cold shoulder, though. One of the
-delightful things about going down the (neo)vim learning journey is that you
-apparently never stop finding features that are both surprising and quirky, and
-in my experience, a lot of these nuggets of gold are inherited from vim. For
-example:
-
-- Did you know that `g?<motion>` will rot13 encode text?
-- Did you know that `gu<motion>` and `gU<motion>`, can convert
-  text to lowercase or uppercase, respectively?
-- Did you know you can open and edit a remote file without leaving vim with `:e
-  scp://<user>@<host>//absolute/path/to/file.txt`
-- Did you know that you can yank (`y`), change (`c`), or delete (`d`) text
-  inside curly braces, parenthesis, or square braces with key sequences like:
-  - `di{`: delete inside curly braces
-  - `ci(`: change inside parenthesis
-  - `yi[`: yank inside square brackets
-  - `p`, intuitively, will paste (or "`put`") that text where the cursor is
-    after yanking
-
-That is a random smattering of functionality, but the idea that there are so
-many random fun things like this to learn, and that they are available on every
-Unix-like terminal you touch is the legacy of vim (and vi that came before).
-I definitely don't sleep on plain-old vim. That being said, neovim has all this
-and more!
+The first question for someone entering this space is, what is the difference
+between vim and neovim, and which one should I learn? For a quick overview,
+check out my post: [vim vs. neovim](./vimVsNeovim)
 
 ## My Configurations
 
@@ -154,157 +110,27 @@ echo $config >> $XDG_CONFIG_HOME/nvim/init.vim
 Beyond that, this is your opportunity to learn "the vim way," of editing text.
 Vim is like a programming language for text transformation – try to avoid
 creating excessive mappings unless you're certain that there is no other way.
-Check out my [other post all about editing text in vim](./vimEditing.mdx)
+There are a ton of resources for learning these basics. I recommend starting by
+running `vimtutor` from the command line, which will open vim in your terminal
+with an interactive tutorial that you can follow along with. There are also
+tons of [vim cheat sheets](https://vim.rtorr.com/) to help you. Good luck!
 
 ## Step 2: vim
 
 You already know the basics of editing text, but transitioning towards using
-"real" vim means that you're going to learn some more "meta" vim concepts:
-
-- configuration
-- buffers
-- windows
-- tabs
-- terminal emulator
-- file explorer
-
-Each of these concepts support you in navigating codebases and doing getting
-development work done with vim, and go beyond the basic text editing shortcuts.
-
-For now, you're going to have a more text-editor-like experience, and you might
-even prefer to use vim and your previous tool of choice alternatively.
-Certainly, if you make heavy use of language support features or linters, a
-no-nonsense vim setup might not suit your needs excellently, but this is a
-transition period. My neovim configuration, which is the last step of this
-roadmap, includes all that stuff. So, consider skipping ahead if you can't make
-do without linting errors, jump-to-definition, etc.
-
-Just be **warned,** it is surprising how productive plain vim is without all
-those bells and whistles. Programmers were using vim as a professional tool in
-the 1990s, and they built plenty of workflows to solve a programmer's problems
-in the text editor without introducing complexity. You'd be remiss not to learn
-the true "vim" way. Not only that, but you might find that [your problem with
-vim is that you don't grok vi!]( https://stackoverflow.com/a/1220118)
-
-### Configuration
-
-Let's keep it simple: I have a [basic vim config on
-github](https://github.com/jdevries3133/vim_config) which represents a good
-place to start. If you simply [look at the `plugins.vim` file to see which
-plugins are included,](https://github.com/jdevries3133/vim_config/blob/main/plugins.vim)
-you'll see that there are _very_ few, and that is on purpose: keep trying to do
-things the "vim" way, and use plugins when you're sure there isn't another way
-to do what you're trying to do.
-
-Fork my config, follow the directions for how to install it, and it'll have you
-up and running without much bloat.
-
-### Buffers
-
-A buffer in vim represents an open file. By default, vim will close buffers
-anytime you navigate away from a file, and warn you if it's unsaved, but if you
-have `set hidden` in your config, then buffers persist in the background and
-they can persist in an unsaved state. Aside from storing any unsaved changes,
-buffers also keep track of the position of your cursor in the file, so that
-you'll pick up right where you left off.
-
-You can view all the buffers you have open with the `:ls` command. You'll see
-that each buffer has a unique id, and you can go directly to any open buffer
-with `:b <id>`. You can also type the name of the file, and vim will offer
-completion options if you press tab; for example, `:b my_text_file.txt`. This
-comes in handy if you have a terminal open in the background. In vim,
-background terminals have the name of your shell, so the buffer name will often
-be `/bin/bash`. So, you can consistently jump to a background terminal with `:b
-bash<tab>`. Similarly, in neovim, terminals start with `term://...`, so you can
-jump to them with `:b ter<tab>`.
-
-Sometimes, you might have unsaved changes in a hidden buffer, in which case vim
-will try to prevent you from quitting without saving, showing the following
-message:
-
-```text
-E162: No write since last change for buffer "..."
-```
-
-If you want to quit anyway, you can use `:q!`. Or, if you want to write to all
-buffers, including hidden ones, you can use `:wa` (`:wall`).
-
-Vim will keep track of the last buffer you were editing, and you can toggle
-back and forth between two buffers with `C-^` (control + ^).
-
-There are a lot of resources all about vim buffers online that go into more
-detail, but never forget that vim's build-in help can be a great resource for
-information. Just type [`:help
-buffers.`](https://vimhelp.org/windows.txt.html#buffers)
-
-### Windows
-
-`:split` or `:vsplit` can be used to split your vim screen into two windows,
-either horizontally or vertically, respectively. This is super useful because
-you can look at two files side-by-side! I often find myself falling into a
-4-panel layout if I'm really multitasking, which is way more files than I'm
-comfortably able to look at in VS Code – that's the beauty of not having any
-visible user interface!
-
-<Image
-  src="/static/vimWindowExample.webp"
-  alt="image showing vim with multiple windows"
-  caption="This is actually a real world example! I opened up 3 windows to figure out how to use this image component: this post's source is on the left, the import I needed to copy is on the top right, and the previous usage of this component is in the bottom right."
-/>
-
-Windows are key for any sort of serious productivity in vim, and you'll
-certainly interact with them a lot. You'll see some
-[shortcuts in my vim config](https://github.com/jdevries3133/vim_config/blob/5d6b864a644d81eae4f953cabee13b09dd0dcfbf/common.vim#L31-L35):
-to help with vim windows:
-
-```
-nnoremap <C-h> <C-w>h
-nnoremap <C-j> <C-w>j
-nnoremap <C-k> <C-w>k
-nnoremap <C-l> <C-w>l
-nnoremap <C-c> <C-w>c
-```
-
-Normally, to interact with windows, you have to type `<C-w>` ("control + w"),
-then the "action" key. These are the default mappings:
-
-- `<C-w>`, then `h` to move left
-- `<C-w>`, then `j` to move down
-- `<C-w>`, then `k` to move up
-- `<C-w>`, then `l` to move right
-- `<C-w>`, then `c` to close the current window
-
-These mappings make it so that you don't need to do so much typing to move
-between windows!
-
-- `<C-h>`: move left
-- `<C-j>`: move down
-- `<C-k>`: move up
-- `<C-l>`: move right
-- `<C-c>`: close the current window
-
-So, to simplify all of that, you can just hold down "control," and then use
-those same fundamental vim movement keys (`h`, `j`, `k`, `l`) to switch between
-windows. Putting everything together, your typical vim-window workflow looks
-like this:
-
-1. use `:vs` or `:sp` to split the current window
-2. use `:e <file>`, or `:b <buffer>`, or some other command to switch to a
-   different file for one of those windows
-
-### Tabs
-### Terminal Emulator
-### File Explorer
-
-
-Explain how to setup my config
+"real" vim means that you're going to learn some more "meta" vim concepts. I
+have a dedicated post about [vim "meta" concepts](./vimMetaConcepts)
 
 ## Step 3: neovim
 
-Explain how to setup my config
+Again, take a look at [my neovim
+config](https://github.com/jdevries3133/nvim_config) and follow the readme
+instructions for setup. Take a look at my corresponding post, ["My Neovim
+Config"](./myNeovimConfig)
 
-TODO: consider having three posts:
+## That's It!
 
-- how I recommend you learn vim
-- how to setup vim w/my vim config
-- how to setup neovim w/my neovim config
+Start with an editor plugin, start using vim and figure out how to "grok vi,"
+and finally move onto a modern neovim setup if you wish. Using these tools for
+programming and editing text in general is something that I deeply enjoy, and
+I hope that this is somewhat useful for others who would like to join me!
