add basic blog post search functionality

--- a/app/mdx/developingClusterApps.mdx
+++ b/app/mdx/developingClusterApps.mdx
@@ -22,7 +22,7 @@ for yourself that you'd otherwise need to turn to a Platform as a Service
 provider like Heroku for, while also being in full control of the stack and the
 workloads that you run.
 
-I already wrote another post about [how I built my cluster,](/blog/myCluster)
+I already wrote another post about [how I built my cluster,](./myCluster)
 so look there for details on how to get a cluster up and running.
 
 ## Motivations
